--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Fetch release data and deepen repository
+      - name: Fetch release data
         id: load-release
         run: |
           set -ex
@@ -147,12 +147,13 @@ jobs:
           GH_REPO: ${{ github.repository }}
           GH_PR: ${{ github.event.pull_request.number }}
           ARTIFACT_URL: ${{ steps.build-artifact.outputs.artifact-url }}
+          PR_COMMIT: ${{ github.event.pull_request.head.sha }}
         run: |
           set -ex
-          gh pr comment $GH_PR --edit-last --create-if-none -F - <<EOF
+          [ -n "$ARTIFACT_URL" ] && gh pr comment $GH_PR --edit-last --create-if-none -F - <<EOF
           # PR Artifacts
           ### You can download the built PDFs and build logs for directories changed by this PR [here]($ARTIFACT_URL).
-          ### Last successful build: $(git rev-parse --short HEAD) — $(cat ./_build/update | sed 's/$/, /g' | tr -d '\n' | head -c -2)
+          ### Last successful build: $(echo "$PR_COMMIT" | head -c 8) — $(cat ./_build/update | sed 's/$/, /g' | tr -d '\n' | head -c -2)
 
           *Note: this comment will update automatically on each successfully built change on this PR's branch.*
           EOF
